FEAT: About us page - Add about us page title and space for Liliana and Angie sections

--- a/about.html
+++ b/about.html
@@ -120,41 +120,32 @@
       </div>
     </div>
 
-    <!-- HEADER -->
-    <header class="container header header-image">
-      <img
-        src="assets/images/parc-petal-black.svg"
-        class="overlay-img"
-        alt="Overlay element"
-      />
-      <div class="col-10 col-lg-8 mx-auto">
-        <div class="container">
-          <img
-            src="assets/images/home-jumbotron-pic.webp"
-            class="background-img"
-            alt="Image of the tall grass on the top of the hill overlooking the sea in the sunset"
-          />
-          <p class="text-jumbotron text-white">we are PARC training</p>
-          <p class="text-white py-2">
-            Promoting Anti-discriminatory Responses for Change in the mental
-            health field. <br />
-            If you are interested in learning more about diverse and inclusive
-            practice get in touch with us today.
-          </p>
-          <div class="button py-2">
-            <a href="#" class="button-link">
-              <span class="button-text d-block">Get in touch</span>
-              <span class="button-icon pt-1"
-                ><i class="fa-solid fa-circle-arrow-right"></i
-              ></span>
-            </a>
-          </div>
+    <!-- ABOUT US -->
+    <div class="container">
+      <div class="col-11 col-md-10 col-lg-8 py-5 mx-auto">
+        <div class="py-3">
+          <h1 class="py-4 text-center text-parc-red">about us</h1>
         </div>
       </div>
-    </header>
+    </div>
 
-    <!-- ABOUT US -->
-    <div></div>
+    <!-- LILIANA -->
+    <div class="container bg-parc-llgrey">
+      <div class="col-11 col-md-10 col-lg-8 py-5 mx-auto">
+        <div class="py-3">
+          <h1 class="py-4 text-center text-parc-red">liliana</h1>
+        </div>
+      </div>
+    </div>
+
+    <!-- ANGIE -->
+    <div class="container">
+      <div class="col-11 col-md-10 col-lg-8 py-5 mx-auto">
+        <div class="py-3">
+          <h1 class="py-4 text-center text-parc-red">angie</h1>
+        </div>
+      </div>
+    </div>
 
     <!-- SECTION - TESTIMONIALS -->
     <div class="container bg-parc-lgrey">
