FEAT: About us page - add content for Lilana and Angie profiles

--- a/about.html
+++ b/about.html
@@ -132,18 +132,67 @@
     <!-- LILIANA -->
     <div class="container bg-parc-llgrey">
       <div class="col-11 col-md-10 col-lg-8 py-5 mx-auto">
-        <div class="py-3">
-          <h1 class="py-4 text-center text-parc-red">liliana</h1>
-        </div>
+        <div class="py-3 d-flex gap-5">
+          <div class="profile-img">
+            <h2 class="text-start text-parc-red">liliana morales</h2>
+          </div>
+          <div>
+            <h2 class="py-4 text-start text-parc-red">liliana morales</h2>
+            <p>
+              Liliana Morales is a migrant woman, and Counselling Psychologist, originally from Colombia.
+              She is a Latin American mestiza, and Colombian-Irish.
+              Liliana has 20 years’ experience working therapeutically with asylum seekers and refugees in Ireland in the public service sector,
+              and she is now working in the voluntary sector managing services for survivors of torture.
+            </p>
+            <p>
+              She is the Therapy Manager in Spirasi.
+              She is involved in delivering training for doctoral psychology trainees (Clinical, Counselling and Educational),
+              psychologists and other mental health and health care professionals on cultural competence/cultural humility/migrants’ mental health.
+              She’s a member of PSI and was a co-founder of the Culture and Ethnic Diversity SIG, no longer in existence.
+            </p>
+            <p>
+              Along with Angie McLaughlin, she is co-founder of PARC Training.
+              She has been invited to deliver key note speeches, and participated at events, organised by special interest groups and women’s mental health networks.
+              She provides supervision to staff at a voluntary organisation who works with vulnerable populations and forced migrants.
+              Liliana has a passion for culturally inclusive practice, challenging systems, politics, social justice issues and diversity within psychology/mental health and the health space in general.
+              She lives with her tri-cultural family in Dublin.
+            </p>
+          </div>
+          </div>
       </div>
     </div>
 
     <!-- ANGIE -->
-    <div class="container">
+    <div class="container bg-parc-llgrey">
       <div class="col-11 col-md-10 col-lg-8 py-5 mx-auto">
-        <div class="py-3">
-          <h1 class="py-4 text-center text-parc-red">angie</h1>
-        </div>
+        <div class="py-3 d-flex gap-5">
+          <div class="profile-img">
+            <h2 class="text-start text-parc-red">angie mclaughlin</h2>
+          </div>
+          <div>
+            <h2 class="py-4 text-start text-parc-red">angie mclaughlin</h2>
+            <p>
+              Angie McLaughlin is a cis gender heterosexual woman (she/her).
+              She was brought up working class in Scotland, with an Irish father and Scottish mother, and married into an African American family.
+              She is a Chartered Counselling Psychologist and Family Therapist with a passion for exploring Equity, Diversity and Inclusivity
+              in both professional and personal lives.
+            </p>
+            <p>
+              After completing her training in San Francisco in as a Marriage and Family therapist in 1997,
+              she went on to work in community mental health in San Francisco for several years before returning to Ireland.
+              Working with marginalised groups such as those at risk for homelessness, ethnic minorities, the LGBTI+ community
+              and people diagnosed with HIV allowed her to witness first-hand the direct relationship between poor mental health and discrimination.
+            </p>
+            <p>
+              Throughout her career she has brought an EDI lens to her work in multiple types of organisations with adults, youth, couples, families and groups.
+              She values the diversity in the work that she has done which has allowed her to be challenged by different perspectives on an ongoing basis.
+              More recently, she has developed and delivers training on proactive non-discriminatory practice for clinicians.
+              She currently works part time in youth mental health for Jigsaw.
+              She co-formed the EDI subcommittee in FTAI and represents this group on the FTAI Exec.
+              She continues her life long striving to have humility when working with people who are different from her.
+            </p>
+          </div>
+          </div>
       </div>
     </div>
 
