STYLE: About us - Liliana profile section divs

--- a/about.html
+++ b/about.html
@@ -132,11 +132,11 @@
     <!-- LILIANA -->
     <div class="container bg-parc-llgrey">
       <div class="col-11 col-md-10 col-lg-8 py-5 mx-auto">
-        <div class="py-3 d-flex gap-5">
-          <div class="profile-img">
-            <h2 class="text-start text-parc-red">liliana morales</h2>
+        <div class="py-3 w-100">
+          <div class="d-inline-block about-img">
+            <img class="profile-img" src="assets/images/liliana-pic.jpg" alt="Profile image of Liliana Morales" />
           </div>
-          <div>
+          <div class="d-inline-block about-text">
             <h2 class="py-4 text-start text-parc-red">liliana morales</h2>
             <p>
               Liliana Morales is a migrant woman, and Counselling Psychologist, originally from Colombia.
