FEAT: About us - Add profile links (linkedin and email)

--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
 
     <!-- ABOUT US -->
     <div class="container">
-      <div class="col-11 col-md-10 col-lg-8 py-5 mx-auto">
+      <div class="col-11 col-md-10 col-lg-8 py-2 mx-auto">
         <div class="py-3">
           <h1 class="py-4 text-center text-parc-red">about us</h1>
         </div>
@@ -134,29 +134,42 @@
       <div class="col-11 col-md-10 col-lg-8 py-5 mx-auto">
         <div class="py-3 w-100">
           <div class="d-inline-block about-img">
-            <img class="profile-img" src="assets/images/liliana-pic.jpg" alt="Profile image of Liliana Morales" />
+            <img class="profile-img" src="assets/images/liliana-pic.jpg" alt="Profile image of Liliana Morales"/>
+            <div class="container">
+              <a href="" class="profile-link" aria-label="Go to LinkedIn">
+                <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
+              </a>
+              <a href="" class="profile-link" aria-label="Go to LinkedIn">
+                <i class="fa-regular fa-envelope" aria-hidden="true"></i>
+              </a>
+            </div>
           </div>
           <div class="d-inline-block about-text">
             <h2 class="py-4 text-start text-parc-red">liliana morales</h2>
-            <p>
+            <p class="fw-bolder">
               Liliana Morales is a migrant woman, and Counselling Psychologist, originally from Colombia.
               She is a Latin American mestiza, and Colombian-Irish.
-              Liliana has 20 years’ experience working therapeutically with asylum seekers and refugees in Ireland in the public service sector,
+              Liliana has 20 years&apos; experience working therapeutically with asylum seekers and refugees in Ireland in the public service sector,
               and she is now working in the voluntary sector managing services for survivors of torture.
             </p>
-            <p>
-              She is the Therapy Manager in Spirasi.
-              She is involved in delivering training for doctoral psychology trainees (Clinical, Counselling and Educational),
-              psychologists and other mental health and health care professionals on cultural competence/cultural humility/migrants’ mental health.
-              She’s a member of PSI and was a co-founder of the Culture and Ethnic Diversity SIG, no longer in existence.
-            </p>
-            <p>
-              Along with Angie McLaughlin, she is co-founder of PARC Training.
-              She has been invited to deliver key note speeches, and participated at events, organised by special interest groups and women’s mental health networks.
-              She provides supervision to staff at a voluntary organisation who works with vulnerable populations and forced migrants.
-              Liliana has a passion for culturally inclusive practice, challenging systems, politics, social justice issues and diversity within psychology/mental health and the health space in general.
-              She lives with her tri-cultural family in Dublin.
-            </p>
+            <span class="">
+              <p>
+                She is the Therapy Manager in Spirasi.
+                She is involved in delivering training for doctoral psychology trainees (Clinical, Counselling and Educational),
+                psychologists and other mental health and health care professionals on cultural competence/cultural humility/migrants&apos; mental health.
+                She&apos;s a member of PSI and was a co-founder of the Culture and Ethnic Diversity SIG, no longer in existence.
+              </p>
+              <p>
+                Along with Angie McLaughlin, she is co-founder of PARC Training.
+                She has been invited to deliver key note speeches, and participated at events, organised by special interest groups and women&apos;s mental health networks.
+                She provides supervision to staff at a voluntary organisation who works with vulnerable populations and forced migrants.
+                Liliana has a passion for culturally inclusive practice, challenging systems, politics, social justice issues and diversity within psychology/mental health and the health space in general.
+                She lives with her tri-cultural family in Dublin.
+              </p>
+              <p class="py-2 text-end">
+                See more...
+              </p>
+            </span>
           </div>
           </div>
       </div>
