STYLE: About us page - style profile media links

--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
           aria-label="Linkedin"
         >
           <i
-            class="fa-brands fa-linkedin-in text-parc-red bg-white"
+            class="fa-brands fa-linkedin-in fa-linkedin-in-footer text-parc-red bg-white"
             aria-hidden="true"
           ></i>
         </a>
@@ -134,13 +134,13 @@
       <div class="col-11 col-md-10 col-lg-8 py-5 mx-auto">
         <div class="py-3 w-100">
           <div class="d-inline-block about-img">
-            <img class="profile-img" src="assets/images/liliana-pic.jpg" alt="Profile image of Liliana Morales"/>
+            <img class="profile-img mb-2" src="assets/images/liliana-pic.jpg" alt="Profile image of Liliana Morales"/>
             <div class="container">
               <a href="" class="profile-link" aria-label="Go to LinkedIn">
-                <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
+                <i class="fa-brands fa-linkedin-in text-1-500" aria-hidden="true"></i>
               </a>
               <a href="" class="profile-link" aria-label="Go to LinkedIn">
-                <i class="fa-regular fa-envelope" aria-hidden="true"></i>
+                <i class="fa-regular fa-envelope text-1-500" aria-hidden="true"></i>
               </a>
             </div>
           </div>
@@ -480,7 +480,7 @@
               aria-label="Linkedin"
             >
               <i
-                class="fa-brands fa-linkedin-in text-parc-ddgrey"
+                class="fa-brands fa-linkedin-in fa-linkedin-in-footer  text-parc-ddgrey"
                 aria-hidden="true"
               ></i>
             </a>
