--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           aria-label="Linkedin"
         >
           <i
-            class="fa-brands fa-linkedin-in text-parc-red bg-white"
+            class="fa-brands fa-linkedin-in fa-linkedin-in-footer text-parc-red bg-white"
             aria-hidden="true"
           ></i>
         </a>
@@ -632,7 +632,7 @@
               aria-label="Linkedin"
             >
               <i
-                class="fa-brands fa-linkedin-in text-parc-ddgrey"
+                class="fa-brands fa-linkedin-in fa-linkedin-in-footer text-parc-ddgrey"
                 aria-hidden="true"
               ></i>
             </a>
