--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
           aria-label="Linkedin"
         >
           <i
-            class="fa-brands fa-linkedin-in text-parc-red bg-white"
+            class="fa-brands fa-linkedin-in fa-linkedin-in-footer text-parc-red bg-white"
             aria-hidden="true"
           ></i>
         </a>
@@ -447,7 +447,7 @@
               aria-label="Linkedin"
             >
               <i
-                class="fa-brands fa-linkedin-in text-parc-ddgrey"
+                class="fa-brands fa-linkedin-in fa-linkedin-in-footer text-parc-ddgrey"
                 aria-hidden="true"
               ></i>
             </a>
