--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
 
     <!-- LILIANA -->
     <div class="container bg-parc-llgrey">
-      <div class="col-11 col-md-10 col-lg-8 py-5 mx-auto">
+      <div class="col-11 col-md-9 col-lg-8 py-5 mx-auto">
         <div class="py-3 w-100">
           <div class="d-inline-block about-img">
             <img class="profile-img mb-2" src="assets/images/liliana-pic.jpg" alt="Profile image of Liliana Morales"/>
@@ -145,7 +145,7 @@
             </div>
           </div>
           <div class="d-inline-block about-text">
-            <h2 class="py-4 text-start text-parc-red">liliana morales</h2>
+            <h2 class="py-2 text-start text-parc-red">liliana morales</h2>
             <p class="fw-bolder">
               Liliana Morales is a migrant woman, and Counselling Psychologist, originally from Colombia.
               She is a Latin American mestiza, and Colombian-Irish.
@@ -166,7 +166,7 @@
                 Liliana has a passion for culturally inclusive practice, challenging systems, politics, social justice issues and diversity within psychology/mental health and the health space in general.
                 She lives with her tri-cultural family in Dublin.
               </p>
-              <p class="py-2 text-end">
+              <p class="py-2 text-end fw-medium">
                 See more...
               </p>
             </span>
