FEAT: About us - Add see more/see less button to show/collapse paragraph in Liliana's bio

--- a/about.html
+++ b/about.html
@@ -146,13 +146,13 @@
           </div>
           <div class="d-inline-block about-text">
             <h2 class="py-2 text-start text-parc-red">liliana morales</h2>
-            <p class="fw-bolder">
+            <p class="fw-bolder py-2">
               Liliana Morales is a migrant woman, and Counselling Psychologist, originally from Colombia.
               She is a Latin American mestiza, and Colombian-Irish.
               Liliana has 20 years&apos; experience working therapeutically with asylum seekers and refugees in Ireland in the public service sector,
               and she is now working in the voluntary sector managing services for survivors of torture.
             </p>
-            <span class="">
+            <span class="py-2" id="moreText">
               <p>
                 She is the Therapy Manager in Spirasi.
                 She is involved in delivering training for doctoral psychology trainees (Clinical, Counselling and Educational),
@@ -166,10 +166,8 @@
                 Liliana has a passion for culturally inclusive practice, challenging systems, politics, social justice issues and diversity within psychology/mental health and the health space in general.
                 She lives with her tri-cultural family in Dublin.
               </p>
-              <p class="py-2 text-end fw-medium">
-                See more...
-              </p>
             </span>
+            <button class="toggle-btn text-1-125" id="toggleBtn">See More...</button>
           </div>
           </div>
       </div>
