FEAT: About us - show/collapse paragraph in Liliana's bio smoothlywith jQuery

--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
               Liliana has 20 years&apos; experience working therapeutically with asylum seekers and refugees in Ireland in the public service sector,
               and she is now working in the voluntary sector managing services for survivors of torture.
             </p>
-            <span class="py-2" id="moreText">
+            <span class="" id="moreText">
               <p>
                 She is the Therapy Manager in Spirasi.
                 She is involved in delivering training for doctoral psychology trainees (Clinical, Counselling and Educational),
