FEAT: About us - Add Angie's bio section

--- a/about.html
+++ b/about.html
@@ -174,34 +174,45 @@
     </div>
 
     <!-- ANGIE -->
-    <div class="container bg-parc-llgrey">
-      <div class="col-11 col-md-10 col-lg-8 py-5 mx-auto">
-        <div class="py-3 d-flex gap-5">
-          <div class="profile-img">
-            <h2 class="text-start text-parc-red">angie mclaughlin</h2>
+    <div class="container bg-parc-purple">
+      <div class="col-11 col-md-9 col-lg-8 py-5 mx-auto">
+        <div class="py-3 w-100">
+          <div class="d-inline-block about-img">
+            <img class="profile-img mb-2" src="assets/images/angie-pic.jpg" alt="Profile image of Liliana Morales"/>
+            <div class="container">
+              <a href="" class="profile-link" aria-label="Go to LinkedIn">
+                <i class="fa-brands fa-linkedin-in text-1-500" aria-hidden="true"></i>
+              </a>
+              <a href="" class="profile-link" aria-label="Go to LinkedIn">
+                <i class="fa-regular fa-envelope text-1-500" aria-hidden="true"></i>
+              </a>
+            </div>
           </div>
-          <div>
-            <h2 class="py-4 text-start text-parc-red">angie mclaughlin</h2>
-            <p>
+          <div class="d-inline-block about-text">
+            <h2 class="py-2 text-start text-white">angie mclaughlin</h2>
+            <p class="fw-bolder py-2">
               Angie McLaughlin is a cis gender heterosexual woman (she/her).
               She was brought up working class in Scotland, with an Irish father and Scottish mother, and married into an African American family.
               She is a Chartered Counselling Psychologist and Family Therapist with a passion for exploring Equity, Diversity and Inclusivity
               in both professional and personal lives.
             </p>
-            <p>
-              After completing her training in San Francisco in as a Marriage and Family therapist in 1997,
-              she went on to work in community mental health in San Francisco for several years before returning to Ireland.
-              Working with marginalised groups such as those at risk for homelessness, ethnic minorities, the LGBTI+ community
-              and people diagnosed with HIV allowed her to witness first-hand the direct relationship between poor mental health and discrimination.
-            </p>
-            <p>
-              Throughout her career she has brought an EDI lens to her work in multiple types of organisations with adults, youth, couples, families and groups.
-              She values the diversity in the work that she has done which has allowed her to be challenged by different perspectives on an ongoing basis.
-              More recently, she has developed and delivers training on proactive non-discriminatory practice for clinicians.
-              She currently works part time in youth mental health for Jigsaw.
-              She co-formed the EDI subcommittee in FTAI and represents this group on the FTAI Exec.
-              She continues her life long striving to have humility when working with people who are different from her.
-            </p>
+            <span class="" id="moreText">
+              <p>
+                After completing her training in San Francisco in as a Marriage and Family therapist in 1997,
+                she went on to work in community mental health in San Francisco for several years before returning to Ireland.
+                Working with marginalised groups such as those at risk for homelessness, ethnic minorities, the LGBTI+ community
+                and people diagnosed with HIV allowed her to witness first-hand the direct relationship between poor mental health and discrimination.
+              </p>
+              <p>
+                Throughout her career she has brought an EDI lens to her work in multiple types of organisations with adults, youth, couples, families and groups.
+                She values the diversity in the work that she has done which has allowed her to be challenged by different perspectives on an ongoing basis.
+                More recently, she has developed and delivers training on proactive non-discriminatory practice for clinicians.
+                She currently works part time in youth mental health for Jigsaw.
+                She co-formed the EDI subcommittee in FTAI and represents this group on the FTAI Exec.
+                She continues her life long striving to have humility when working with people who are different from her.
+              </p>
+            </span>
+            <button class="toggle-btn text-1-125" id="toggleBtn">See More...</button>
           </div>
           </div>
       </div>
