STYLE: About us - further styling of Liliana's bio

--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
     </div>
 
     <!-- LILIANA -->
-    <div class="container bg-parc-llgrey">
+    <div class="container bg-parc-llgrey liliana-bio">
       <div class="col-11 col-md-9 col-lg-8 py-5 mx-auto">
         <div class="py-3 w-100">
           <div class="d-inline-block about-img">
