STYLE: About us - Responsive, resize Angie's bio to mobile size

--- a/about.html
+++ b/about.html
@@ -146,13 +146,13 @@
           </div>
           <div class="d-inline-block about-text">
             <h2 class="py-2 text-start text-parc-red">liliana morales</h2>
-            <p class="fw-bolder py-2">
+            <p class="fw-bolder py-4">
               Liliana Morales is a migrant woman, and Counselling Psychologist, originally from Colombia.
               She is a Latin American mestiza, and Colombian-Irish.
               Liliana has 20 years&apos; experience working therapeutically with asylum seekers and refugees in Ireland in the public service sector,
               and she is now working in the voluntary sector managing services for survivors of torture.
             </p>
-            <span class="" id="moreText">
+            <span class="text-more" id="moreTextLiliana">
               <p>
                 She is the Therapy Manager in Spirasi.
                 She is involved in delivering training for doctoral psychology trainees (Clinical, Counselling and Educational),
@@ -167,9 +167,9 @@
                 She lives with her tri-cultural family in Dublin.
               </p>
             </span>
-            <button class="toggle-btn text-1-125" id="toggleBtn">See More...</button>
+            <button class="toggle-btn text-1-125" id="toggleBtnLiliana">See More...</button>
           </div>
-          </div>
+        </div>
       </div>
     </div>
 
@@ -190,20 +190,20 @@
           </div>
           <div class="d-inline-block about-text">
             <h2 class="py-2 text-start text-white">angie mclaughlin</h2>
-            <p class="fw-bolder py-2">
+            <p class="fw-bolder py-4 text-white">
               Angie McLaughlin is a cis gender heterosexual woman (she/her).
               She was brought up working class in Scotland, with an Irish father and Scottish mother, and married into an African American family.
               She is a Chartered Counselling Psychologist and Family Therapist with a passion for exploring Equity, Diversity and Inclusivity
               in both professional and personal lives.
             </p>
-            <span class="" id="moreText">
+            <span class="text-white text-more" id="moreTextAngie">
               <p>
                 After completing her training in San Francisco in as a Marriage and Family therapist in 1997,
                 she went on to work in community mental health in San Francisco for several years before returning to Ireland.
                 Working with marginalised groups such as those at risk for homelessness, ethnic minorities, the LGBTI+ community
                 and people diagnosed with HIV allowed her to witness first-hand the direct relationship between poor mental health and discrimination.
               </p>
-              <p>
+              <p class="text-white">
                 Throughout her career she has brought an EDI lens to her work in multiple types of organisations with adults, youth, couples, families and groups.
                 She values the diversity in the work that she has done which has allowed her to be challenged by different perspectives on an ongoing basis.
                 More recently, she has developed and delivers training on proactive non-discriminatory practice for clinicians.
@@ -212,9 +212,9 @@
                 She continues her life long striving to have humility when working with people who are different from her.
               </p>
             </span>
-            <button class="toggle-btn text-1-125" id="toggleBtn">See More...</button>
+            <button class="toggle-btn text-1-125" id="toggleBtnAngie">See More...</button>
           </div>
-          </div>
+        </div>
       </div>
     </div>
 
