STYLE: Update image of the Linkedin ad section

--- a/index.html
+++ b/index.html
@@ -586,15 +586,16 @@
         src="assets/images/linkedin-ad.jpg"
         class="background-img"
         alt="Picture of rows of seats at conference hall"
+        target="_blank"
       />
-      <div class="col-10 py-5 mx-auto text-white">
+      <div class="col-10 py-3 mx-auto text-white">
         <div class="py-1">
           <p class="text-center">
             To find out about our next workshop or a talk, visit our
           </p>
         </div>
         <div class="button pt-1 pb-5 mx-auto">
-          <a href="https://www.linkedin.com/company/parc-training-ireland/" class="button-link">
+          <a href="https://www.linkedin.com/company/parc-training-ireland/" class="button-link" target="_blank">
             <span class="button-text d-block">Linkedin page</span>
             <span class="button-icon pt-1"
               ><i class="fa-solid fa-circle-arrow-right"></i
