STYLE: Make Home page jumbotron text more prominent for mobile sizes

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             alt="Image of the tall grass on the top of the hill overlooking the sea in the sunset"
           />
           <p class="text-jumbotron text-white">we are PARC training</p>
-          <p class="text-white py-2">
+          <p class="text-white py-2 text-jumbotron-small">
             Promoting Anti-discriminatory Responses for Change in the mental
             health field. <br />
             If you are interested in learning more about diverse and inclusive
