FEAT: Remove media icons/links from Lilana's and Angie's bio pics

--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
         <div class="py-3 w-100">
           <div class="d-inline-block about-img">
             <img class="profile-img mb-2" src="assets/images/liliana-pic.jpg" alt="Profile image of Liliana Morales"/>
-            <div class="container">
+            <div class="container d-none">
               <a href="" class="profile-link" aria-label="Go to LinkedIn">
                 <i class="fa-brands fa-linkedin-in text-1-500" aria-hidden="true"></i>
               </a>
@@ -179,7 +179,7 @@
         <div class="py-3 w-100">
           <div class="d-inline-block about-img">
             <img class="profile-img mb-2" src="assets/images/angie-pic.jpg" alt="Profile image of Liliana Morales"/>
-            <div class="container">
+            <div class="container d-none">
               <a href="" class="profile-link" aria-label="Go to LinkedIn">
                 <i class="fa-brands fa-linkedin-in text-1-500" aria-hidden="true"></i>
               </a>
