FEAT: Add IAHIP logo in testimonials 9-13

--- a/about.html
+++ b/about.html
@@ -348,7 +348,8 @@
             <img class="testimonial-img" src="" alt="" />
           </div>
           <div class="col col-xs-7">
-            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <h3 class="pt-3 mx-auto testimonial-header"></h3>
+            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
@@ -362,7 +363,8 @@
             <img class="testimonial-img" src="" alt="" />
           </div>
           <div class="col col-xs-7">
-            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <h3 class="pt-3 mx-auto testimonial-header"></h3>
+            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
@@ -376,7 +378,8 @@
             <img class="testimonial-img" src="" alt="" />
           </div>
           <div class="col col-xs-7">
-            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <h3 class="pt-3 mx-auto testimonial-header"></h3>
+            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
@@ -390,7 +393,8 @@
             <img class="testimonial-img" src="" alt="" />
           </div>
           <div class="col col-xs-7">
-            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <h3 class="pt-3 mx-auto testimonial-header"></h3>
+            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
@@ -404,7 +408,8 @@
             <img class="testimonial-img" src="" alt="" />
           </div>
           <div class="col col-xs-7">
-            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <h3 class="pt-3 mx-auto testimonial-header"></h3>
+            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
