--- a/index.html
+++ b/index.html
@@ -485,7 +485,8 @@
             <img class="testimonial-img" src="" alt="" />
           </div>
           <div class="col col-xs-7">
-            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <h3 class="pt-3 mx-auto testimonial-header"></h3>
+            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
@@ -499,7 +500,8 @@
             <img class="testimonial-img" src="" alt="" />
           </div>
           <div class="col col-xs-7">
-            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <h3 class="pt-3 mx-auto testimonial-header"></h3>
+            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
@@ -513,7 +515,8 @@
             <img class="testimonial-img" src="" alt="" />
           </div>
           <div class="col col-xs-7">
-            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <h3 class="pt-3 mx-auto testimonial-header"></h3>
+            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
@@ -527,7 +530,8 @@
             <img class="testimonial-img" src="" alt="" />
           </div>
           <div class="col col-xs-7">
-            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <h3 class="pt-3 mx-auto testimonial-header"></h3>
+            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
@@ -541,7 +545,8 @@
             <img class="testimonial-img" src="" alt="" />
           </div>
           <div class="col col-xs-7">
-            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <h3 class="pt-3 mx-auto testimonial-header"></h3>
+            <img src="assets/images/IAHIP-logo.png" alt="IAHIP-logo" class="iahip-logo">
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p
               class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
